Initital layout design

--- a/index.html
+++ b/index.html
@@ -4,26 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/styles/style.css">
     <title>Hello World!</title>
 </head>
 <body>
-    <header class="navbar" id="top">
+    <header id="top">
         <div class="name">
-            <a href="#top"><h1>Hok S. Uy's Portfolio</h1></a>
+            <h1>
+                <a href="#top">Hok S. Uy's Portfolio</a>
+            </h1>
         </div>
-        <div class="nav">
+        <nav>
             <ul>
                 <li>
-                    My Work
+                    <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                    About Me
+                    <a href="#my-work">My Work</a>
                 </li>
                 <li>
-                    Contact
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
+    <section class="hero">
+        <div class="hero-content">
+          <h2>Hello World, my name is Hok!</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget enim urna. Proin fermentum nibh eget odio malesuada, id pellentesque tortor posuere. Nullam viverra nisl nisi, ut consequat nulla malesuada non. Nulla hendrerit efficitur quam, ut dignissim dolor lacinia vitae. Maecenas arcu erat, egestas ac dui tristique, molestie malesuada odio. Pellentesque sed diam dapibus, euismod nibh at, euismod leo. Fusce a augue mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus sapien id nisl pharetra, non ornare nunc vulputate. Fusce a justo iaculis, varius justo nec, egestas nibh. Vestibulum et nulla eget ante sagittis egestas. Cras nec ultrices arcu. Ut commodo nisl lacus, ac condimentum nunc ultricies et.          </p>
+        </div>
+      </section>
+    <section id="about-me" class="content">
+        <div class="content-flex-row">
+            <h2 class="section-title">About Me</h2>
+        </div>
+        <div class="content-flex-row">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget enim urna. Proin fermentum nibh eget odio malesuada, id pellentesque tortor posuere. Nullam viverra nisl nisi, ut consequat nulla malesuada non. Nulla hendrerit efficitur quam, ut dignissim dolor lacinia vitae. Maecenas arcu erat, egestas ac dui tristique, molestie malesuada odio. Pellentesque sed diam dapibus, euismod nibh at, euismod leo. Fusce a augue mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus sapien id nisl pharetra, non ornare nunc vulputate. Fusce a justo iaculis, varius justo nec, egestas nibh. Vestibulum et nulla eget ante sagittis egestas. Cras nec ultrices arcu. Ut commodo nisl lacus, ac condimentum nunc ultricies et.</p>
+        </div>
+    </section>
+    <section id="my-work" class="content">
+        <div class="content-flex-row">
+            <h2 class="section-title">My Work</h2>
+        </div>
+    </section>
+    <section id="contact" class="content">
+        <div class="content-flex-row">
+            <h2 class="section-title">Contact Me</h2>
+        </div>
+    </section>
+    <footer>
+        &copy Copyrighted 2021 by Hok S. Uy
+    </footer>
 </body>
 </html>
