--- a/index.html
+++ b/index.html
@@ -8,34 +8,39 @@
     <title>Hello World!</title>
 </head>
 <body>
-    <header id="top">
-        <div class="name">
-            <h1>
-                <a href="#top">Hok S. Uy's Portfolio</a>
-            </h1>
-        </div>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#about-me">About Me</a>
-                </li>
-                <li>
-                    <a href="#my-work">My Work</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <section class="hero">
-        <div class="hero-content">
-          <h2>Hello World, my name is Hok!</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget enim urna. Proin fermentum nibh eget odio malesuada, id pellentesque tortor posuere. Nullam viverra nisl nisi, ut consequat nulla malesuada non. Nulla hendrerit efficitur quam, ut dignissim dolor lacinia vitae. Maecenas arcu erat, egestas ac dui tristique, molestie malesuada odio. Pellentesque sed diam dapibus, euismod nibh at, euismod leo. Fusce a augue mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus sapien id nisl pharetra, non ornare nunc vulputate. Fusce a justo iaculis, varius justo nec, egestas nibh. Vestibulum et nulla eget ante sagittis egestas. Cras nec ultrices arcu. Ut commodo nisl lacus, ac condimentum nunc ultricies et.          </p>
+    <section id="top" class="hero">
+        <header>
+            <div class="name">
+                <h1>
+                    <a href="#top">Hok S. Uy's Portfolio</a>
+                </h1>
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#about-me">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#my-work">My Work</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <div class="hero-flex">
+            <div class="hero-flex-top"></div>
+            <div class="hero-content hero-flex-center">
+                <h2>Hello World, my name is Hok!</h2>
+                <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget enim urna. Proin fermentum nibh eget odio malesuada, id pellentesque tortor posuere. Nullam viverra nisl nisi, ut consequat nulla malesuada non. Nulla hendrerit efficitur quam, ut dignissim dolor lacinia vitae. Maecenas arcu erat, egestas ac dui tristique, molestie malesuada odio. Pellentesque sed diam dapibus, euismod nibh at, euismod leo. Fusce a augue mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus sapien id nisl pharetra, non ornare nunc vulputate. Fusce a justo iaculis, varius justo nec, egestas nibh. Vestibulum et nulla eget ante sagittis egestas. Cras nec ultrices arcu. Ut commodo nisl lacus, ac condimentum nunc ultricies et.
+                </p>
+            </div>
+            <div class="hero-flex-bottom"></div>
         </div>
       </section>
-    <section id="about-me" class="content">
+    <section id="about-me" class="about-me content">
         <div class="content-flex-row">
             <h2 class="section-title">About Me</h2>
         </div>
@@ -43,12 +48,12 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget enim urna. Proin fermentum nibh eget odio malesuada, id pellentesque tortor posuere. Nullam viverra nisl nisi, ut consequat nulla malesuada non. Nulla hendrerit efficitur quam, ut dignissim dolor lacinia vitae. Maecenas arcu erat, egestas ac dui tristique, molestie malesuada odio. Pellentesque sed diam dapibus, euismod nibh at, euismod leo. Fusce a augue mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus sapien id nisl pharetra, non ornare nunc vulputate. Fusce a justo iaculis, varius justo nec, egestas nibh. Vestibulum et nulla eget ante sagittis egestas. Cras nec ultrices arcu. Ut commodo nisl lacus, ac condimentum nunc ultricies et.</p>
         </div>
     </section>
-    <section id="my-work" class="content">
+    <section id="my-work" class="my-work content">
         <div class="content-flex-row">
             <h2 class="section-title">My Work</h2>
         </div>
     </section>
-    <section id="contact" class="content">
+    <section id="contact" class="contact content">
         <div class="content-flex-row">
             <h2 class="section-title">Contact Me</h2>
         </div>
