Fixed navbar for standard screens, more layout changes to sections, applied more styling

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/styles/style.css">
-    <title>Hello World!</title>
+    <title>Hok S. Uy - Portfolio</title>
 </head>
 <body>
     <section id="top" class="hero">
         <header>
             <div class="name">
-                <h1>
-                    <a href="#top">Hok S. Uy's Portfolio</a>
-                </h1>
+                <a href="#top"><img src="./assets/images/site-badge.png" alt="Hok Uy site badge banner" class="site-badge"/></a>
             </div>
             <nav>
                 <ul>
@@ -32,9 +33,9 @@
         <div class="hero-flex">
             <div class="hero-flex-top"></div>
             <div class="hero-content hero-flex-center">
-                <h2>Hello World, my name is Hok!</h2>
+                <h2>Hello World!</h2><br>
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget enim urna. Proin fermentum nibh eget odio malesuada, id pellentesque tortor posuere. Nullam viverra nisl nisi, ut consequat nulla malesuada non. Nulla hendrerit efficitur quam, ut dignissim dolor lacinia vitae. Maecenas arcu erat, egestas ac dui tristique, molestie malesuada odio. Pellentesque sed diam dapibus, euismod nibh at, euismod leo. Fusce a augue mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus sapien id nisl pharetra, non ornare nunc vulputate. Fusce a justo iaculis, varius justo nec, egestas nibh. Vestibulum et nulla eget ante sagittis egestas. Cras nec ultrices arcu. Ut commodo nisl lacus, ac condimentum nunc ultricies et.
+                    My name is Hok. I am an IT Professional and Developer who's seeking new opportunities!
                 </p>
             </div>
             <div class="hero-flex-bottom"></div>
