added work cards to my work section

--- a/index.html
+++ b/index.html
@@ -30,33 +30,67 @@
                 </ul>
             </nav>
         </header>
-        <div class="hero-flex">
-            <div class="hero-flex-top"></div>
-            <div class="hero-content hero-flex-center">
+        <div class="flex">
+            <div class="flex-top"></div>
+            <div class="hero-content flex-center">
                 <h2>Hello World!</h2><br>
                 <p>
                     My name is Hok. I am an IT Professional and Developer who's seeking new opportunities!
                 </p>
             </div>
-            <div class="hero-flex-bottom"></div>
+            <div class="flex-bottom"></div>
         </div>
       </section>
-    <section id="about-me" class="about-me content">
-        <div class="content-flex-row">
-            <h2 class="section-title">About Me</h2>
-        </div>
-        <div class="content-flex-row">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eget enim urna. Proin fermentum nibh eget odio malesuada, id pellentesque tortor posuere. Nullam viverra nisl nisi, ut consequat nulla malesuada non. Nulla hendrerit efficitur quam, ut dignissim dolor lacinia vitae. Maecenas arcu erat, egestas ac dui tristique, molestie malesuada odio. Pellentesque sed diam dapibus, euismod nibh at, euismod leo. Fusce a augue mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum maximus sapien id nisl pharetra, non ornare nunc vulputate. Fusce a justo iaculis, varius justo nec, egestas nibh. Vestibulum et nulla eget ante sagittis egestas. Cras nec ultrices arcu. Ut commodo nisl lacus, ac condimentum nunc ultricies et.</p>
-        </div>
-    </section>
-    <section id="my-work" class="my-work content">
-        <div class="content-flex-row">
-            <h2 class="section-title">My Work</h2>
+    <section id="about-me" class="about-me">
+        <div class="flex">
+            <div class="flex-top"></div>
+            <div class=".content flex-center">
+                <h2 class="section-title">About Me</h2>
+                <p>&emsp;I am a Computer Science graduate from the California State University system that entered the Information Technology field after graduating in 2017.</p>
+            </div>
+            <div class="flex-bottom"></div>
         </div>
     </section>
-    <section id="contact" class="contact content">
-        <div class="content-flex-row">
-            <h2 class="section-title">Contact Me</h2>
+    <section id="my-work" class="my-work">
+        <div class="flex">
+            <div class="flex-top"></div>
+            <div class=".content flex-center">
+                <h2 class="section-title">My Work</h2>
+                <div class="content-flex">
+                    <div class="flex-row">
+                        <div class="button">
+                            <h3>Placeholder 1</h3>
+                        </div>
+                        <div class="button">
+                            <h3>Placeholder 2</h3>
+                        </div>
+                        <div class="button">
+                            <h3>Placeholder 3</h3>
+                        </div>
+                    </div><br>
+                    <div class="flex-row">
+                        <div class="button">
+                            <h3>Placeholder 1</h3>
+                        </div>
+                        <div class="button">
+                            <h3>Placeholder 2</h3>
+                        </div>
+                        <div class="button">
+                            <h3>Placeholder 3</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-bottom"></div>
+        </div>
+    </section>
+    <section id="contact" class="contact">
+        <div class="flex">
+            <div class="flex-top"></div>
+            <div class=".content flex-center">
+                <h2 class="section-title">Contact Me</h2>
+            </div>
+            <div class="flex-bottom"></div>
         </div>
     </section>
     <footer>
