added content sections for mywork and contact with images

--- a/index.html
+++ b/index.html
@@ -53,31 +53,50 @@
     </section>
     <section id="my-work" class="my-work">
         <div class="flex">
-            <div class="flex-top"></div>
+            <div class="flex-top"><br></div>
             <div class=".content flex-center">
                 <h2 class="section-title">My Work</h2>
                 <div class="content-flex">
-                    <div class="flex-row">
-                        <div class="button">
-                            <h3>Placeholder 1</h3>
-                        </div>
-                        <div class="button">
-                            <h3>Placeholder 2</h3>
-                        </div>
-                        <div class="button">
-                            <h3>Placeholder 3</h3>
-                        </div>
-                    </div><br>
-                    <div class="flex-row">
-                        <div class="button">
-                            <h3>Placeholder 1</h3>
-                        </div>
-                        <div class="button">
-                            <h3>Placeholder 2</h3>
-                        </div>
-                        <div class="button">
-                            <h3>Placeholder 3</h3>
-                        </div>
+                    <div class="mywork-flex-row">
+                        <a href="https://github.com/hsengu/RagnarokInfo/">
+                            <div id="ro-btn" class="mywork-button">
+                                <h3>RagnarokInfo</h3>
+                            </div>
+                        </a>
+                        <a href="https://hsengu.github.io/web-password-generator/">
+                            <div id="webpass-btn" class="mywork-button">
+                                <h3>Password Generator</h3>
+                            </div>
+                        </a>
+                        <a href="https://hseungu.github.io/horiseon-webapp/">
+                            <div id="seo-btn" class="mywork-button">
+                                <h3>Horiseon Mockup</h3>
+                            </div>
+                        </a>
+                        <a href="#my-work">
+                            <div class="mywork-button">
+                                <div>
+                                    <h3>Placeholder 4</h3>
+                                    <p>Coming Soon!</p>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#my-work">
+                            <div class="mywork-button">
+                                <div>
+                                    <h3>Placeholder 5</h3>
+                                    <p>Coming Soon!</p>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#my-work">
+                            <div class="mywork-button">
+                                <div>
+                                    <h3>Placeholder 6</h3>
+                                    <p>Coming Soon!</p>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -89,6 +108,19 @@
             <div class="flex-top"></div>
             <div class=".content flex-center">
                 <h2 class="section-title">Contact Me</h2>
+                <div class="content-flex">
+                    <div class="contact-flex-row">
+                        <a href="mailto:hok.s.uy@hsengu.com">
+                            <div id="email" class="contact-button"></div>
+                        </a>
+                        <a href="https://linkedin.com/in/hoksuy/">
+                            <div id="linkedin" class="contact-button"></div>
+                        </a>
+                        <a href="https://github.com/hsengu/">
+                            <div id="github" class="contact-button"></div>
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="flex-bottom"></div>
         </div>
