Completed content sections, modified css styling to better fit chronologically

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <title>Hok S. Uy - Portfolio</title>
 </head>
 <body>
+    <!--- Top of page -->
     <section id="top" class="hero">
+        <!-- Fixed navbar header -->
         <header>
             <div class="name">
                 <a href="#top"><img src="./assets/images/site-badge.png" alt="Hok Uy site badge banner" class="site-badge"/></a>
@@ -41,16 +43,21 @@
             <div class="flex-bottom"></div>
         </div>
       </section>
+    <!-- Beginning of About Me Section -->
     <section id="about-me" class="about-me">
         <div class="flex">
             <div class="flex-top"></div>
             <div class=".content flex-center">
-                <h2 class="section-title">About Me</h2>
-                <p>&emsp;I am a Computer Science graduate from the California State University system that entered the Information Technology field after graduating in 2017.</p>
+                <img src="./assets/images/profile/me.jpg" alt="Hok's profile badge"></img>
+                <h2 class="section-title">About Me</h2><br>
+                <p>
+                    &emsp;I am a Computer Science graduate from California State University East Bay and entered the Information Technology field after graduating in 2017. I am a self-proclaimed tech nerd, take interests in everything related to technology, and have work experience ranging from building and deploying hardware, as well as aspects of coding and software development. I am currently seeking new opportunities to gain more experience building and deploying scalable applications utilizing cloud-based services such as AWS and Azure to name a few.
+                </p>
             </div>
             <div class="flex-bottom"></div>
         </div>
     </section>
+    <!-- Beginning of My Work section -->
     <section id="my-work" class="my-work">
         <div class="flex">
             <div class="flex-top"><br></div>
@@ -68,7 +75,7 @@
                                 <h3>Password Generator</h3>
                             </div>
                         </a>
-                        <a href="https://hseungu.github.io/horiseon-webapp/">
+                        <a href="https://hsengu.github.io/horiseon-webapp/">
                             <div id="seo-btn" class="mywork-button">
                                 <h3>Horiseon Mockup</h3>
                             </div>
@@ -103,6 +110,7 @@
             <div class="flex-bottom"></div>
         </div>
     </section>
+    <!-- Beggining of Contact Section -->
     <section id="contact" class="contact">
         <div class="flex">
             <div class="flex-top"></div>
