--- a/index.html
+++ b/index.html
@@ -1,140 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="cssheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Hok S. Uy - Portfolio</title>
 </head>
+
 <body>
-    <!--- Top of page -->
-    <section id="top" class="hero">
-        <!-- Fixed navbar header -->
-        <header>
-            <div class="name">
-                <a href="#top"><img src="./assets/images/site-badge.png" alt="Hok Uy site badge banner" class="site-badge"/></a>
-            </div>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="#about-me">About Me</a>
-                    </li>
-                    <li>
-                        <a href="#my-work">My Work</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <div class="flex">
-            <div class="flex-top"></div>
-            <div class="hero-content flex-center">
-                <h2>Hello World!</h2><br>
-                <p>
-                    My name is Hok. I am an IT Professional and Developer who's seeking new opportunities!
-                </p>
-            </div>
-            <div class="flex-bottom"></div>
+    <nav class="navbar is-fixed-top is-dark" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+            <a class="navbar-item" href="#">
+                <img src="./assets/img/site-badge.png" width="112" height="28">
+            </a>
+
+            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarItems">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+            </a>
         </div>
-      </section>
-    <!-- Beginning of About Me Section -->
-    <section id="about-me" class="about-me">
-        <div class="flex">
-            <div class="flex-top"></div>
-            <div class=".content flex-center">
-                <img src="./assets/images/profile/me.jpg" alt="Hok's profile badge"></img>
-                <h2 class="section-title">About Me</h2><br>
-                <p>
-                    &emsp;I am a Computer Science graduate from California State University East Bay and entered the Information Technology field after graduating in 2017. I am a self-proclaimed tech nerd, take interests in everything related to technology, and have work experience ranging from building and deploying hardware, as well as aspects of coding and software development. I am currently seeking new opportunities to gain more experience building and deploying scalable applications utilizing cloud-based services such as AWS and Azure to name a few.
-                </p>
+        <div id="navbarItems" class="navbar-menu has-text-centered">
+            <div class="navbar-start">
+                <a href="#top" class="navbar-item">
+                    Home
+                </a>
+                <a href="#about-me" class="navbar-item">
+                    About Me
+                </a>
+                <a href="#my-work" class="navbar-item">
+                    My Work
+                </a>
+                <a href="#contact" class="navbar-item">
+                    Contact
+                </a>
             </div>
-            <div class="flex-bottom"></div>
+            <div class="navbar-end">
+                <a href="mailto:webadmin@hsengu.com" class="navbar-item">
+                    Report an issue
+                </a>
+            </div>
         </div>
-    </section>
-    <!-- Beginning of My Work section -->
-    <section id="my-work" class="my-work">
-        <div class="flex">
-            <div class="flex-top"><br></div>
-            <div class=".content flex-center">
-                <h2 class="section-title">My Work</h2>
-                <div class="content-flex">
-                    <div class="mywork-flex-row">
-                        <a href="https://github.com/hsengu/RagnarokInfo/">
-                            <div id="ro-btn" class="mywork-button">
-                                <h3>RagnarokInfo</h3>
+    </nav>
+    <div id="top" class="hero is-fullheight">
+        <div class="hero-body">
+            <div class="container has-text-centered">
+                <h2 class="title has-text-white">Hello World!</h2>
+                <h3 class="subtitle has-text-white">My name is Hok. I am an IT Professional and Developer who's seeking
+                    new opportunities!</h3>
+            </div>
+        </div>
+    </div>
+    <section id="about-me" class="section">
+        <div class="hero is-medium">
+            <div class="hero-body">
+                <div class="card">
+                    <div class="card-content">
+                        <div class="media">
+                            <div class="media-left">
+                                <figure class="image">
+                                    <img src="./assets/img/profile/me.jpg" alt="Hok's Profile Picture">
+                                </figure>
                             </div>
-                        </a>
-                        <a href="https://hsengu.github.io/web-password-generator/">
-                            <div id="webpass-btn" class="mywork-button">
-                                <h3>Password Generator</h3>
+                            <div class="media-content">
+                                <br><br><br><br>
+                                <p class="title is-4">Hok S. Uy</p>
+                                <p class="subtitle is-6"><a href="https://linkedin.com/in/hoksuy">/in/hoksuy</a></p>
                             </div>
-                        </a>
-                        <a href="https://hsengu.github.io/horiseon-webapp/">
-                            <div id="seo-btn" class="mywork-button">
-                                <h3>Horiseon Mockup</h3>
-                            </div>
-                        </a>
-                        <a href="#my-work">
-                            <div class="mywork-button">
-                                <div>
-                                    <h3>Placeholder 4</h3>
-                                    <p>Coming Soon!</p>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#my-work">
-                            <div class="mywork-button">
-                                <div>
-                                    <h3>Placeholder 5</h3>
-                                    <p>Coming Soon!</p>
-                                </div>
-                            </div>
-                        </a>
-                        <a href="#my-work">
-                            <div class="mywork-button">
-                                <div>
-                                    <h3>Placeholder 6</h3>
-                                    <p>Coming Soon!</p>
-                                </div>
-                            </div>
-                        </a>
+                        </div>
+                        <div class="content">
+                            <p>
+                                &emsp;I am a Computer Science graduate from California State University East Bay and
+                                entered the Information Technology field after graduating in 2017. I am a
+                                self-proclaimed tech nerd, take interests in everything related to technology, and have
+                                work experience ranging from building and deploying hardware, as well as aspects of
+                                coding and software development. I am currently seeking new opportunities to gain more
+                                experience building and deploying scalable applications utilizing cloud-based services
+                                such as AWS and Azure to name a few.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="flex-bottom"></div>
-        </div>
     </section>
-    <!-- Beggining of Contact Section -->
-    <section id="contact" class="contact">
-        <div class="flex">
-            <div class="flex-top"></div>
-            <div class=".content flex-center">
-                <h2 class="section-title">Contact Me</h2>
-                <div class="content-flex">
-                    <div class="contact-flex-row">
-                        <a href="mailto:hok.s.uy@hsengu.com">
-                            <div id="email" class="contact-button"></div>
-                        </a>
-                        <a href="https://linkedin.com/in/hoksuy/">
-                            <div id="linkedin" class="contact-button"></div>
-                        </a>
-                        <a href="https://github.com/hsengu/">
-                            <div id="github" class="contact-button"></div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="flex-bottom"></div>
-        </div>
+    <section id="my-work" class="section">
+
     </section>
-    <footer>
-        &copy Copyrighted 2021 by Hok S. Uy
+    <section id="contact" class="section">
+
+    </section>
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <p><strong>&copy;<strong> Copyrighted 2021 by Hok S. Uy</p>
+        </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
