removed contact section and integrated to about-me card

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="cssheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Hok S. Uy - Portfolio</title>
@@ -37,9 +38,6 @@
                 <a href="#my-work" class="navbar-item">
                     My Work
                 </a>
-                <a href="#contact" class="navbar-item">
-                    Contact
-                </a>
             </div>
             <div class="navbar-end">
                 <a href="mailto:webadmin@hsengu.com" class="navbar-item">
@@ -48,15 +46,17 @@
             </div>
         </div>
     </nav>
-    <div id="top" class="hero is-fullheight">
-        <div class="hero-body">
-            <div class="container has-text-centered">
-                <h2 class="title has-text-white">Hello World!</h2>
-                <h3 class="subtitle has-text-white">My name is Hok. I am an IT Professional and Developer who's seeking
-                    new opportunities!</h3>
+    <section id="top">
+        <div class="hero is-fullheight">
+            <div class="hero-body">
+                <div class="container has-text-centered">
+                    <h2 class="title has-text-white">Hello World!</h2>
+                    <h3 class="subtitle has-text-white">My name is Hok. I am an IT Professional and Developer who's seeking
+                        new opportunities!</h3>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
     <section id="about-me" class="section">
         <div class="hero is-medium">
             <div class="hero-body">
@@ -68,10 +68,8 @@
                                     <img src="./assets/img/profile/me.jpg" alt="Hok's Profile Picture">
                                 </figure>
                             </div>
-                            <div class="media-content">
-                                <br><br><br><br>
+                            <div class="media-content mt-auto">
                                 <p class="title is-4">Hok S. Uy</p>
-                                <p class="subtitle is-6"><a href="https://linkedin.com/in/hoksuy">/in/hoksuy</a></p>
                             </div>
                         </div>
                         <div class="content">
@@ -86,13 +84,24 @@
                             </p>
                         </div>
                     </div>
+                    <footer class="card-footer">
+                        <a href="https://github.com/hsengu" class="card-footer-item">
+                            <span class="icon"><i class="fab fa-github"></i></span>
+                            <span>GitHub</span>
+                        </a>
+                        <a href="https://linkedin.com/in/hoksuy" class="card-footer-item">
+                            <span class="icon"><i class="fab fa-linkedin"></i></span>
+                            <span>LinkedIn</span>
+                        </a>
+                        <a href="mailto:hok.s.uy@hsengu.com" class="card-footer-item">
+                            <span class="icon"><i class="fas fa-envelope"></i></span>
+                            <span>E-mail</span>
+                        </a>
+                    </footer>
                 </div>
             </div>
     </section>
     <section id="my-work" class="section">
-
-    </section>
-    <section id="contact" class="section">
 
     </section>
     <footer class="footer">
