--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="cssheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Hok S. Uy - Portfolio</title>
 </head>
@@ -51,14 +54,15 @@
             <div class="hero-body">
                 <div class="container has-text-centered">
                     <h2 class="title has-text-white">Hello World!</h2>
-                    <h3 class="subtitle has-text-white">My name is Hok. I am an IT Professional and Developer who's seeking
+                    <h3 class="subtitle has-text-white">My name is Hok. I am an IT Professional and Developer who's
+                        seeking
                         new opportunities!</h3>
                 </div>
             </div>
         </div>
     </section>
     <section id="about-me" class="section">
-        <div class="hero is-medium">
+        <div class="hero is-fullheight">
             <div class="hero-body">
                 <div class="card">
                     <div class="card-content">
@@ -102,7 +106,80 @@
             </div>
     </section>
     <section id="my-work" class="section">
+        <div class="hero is-fullheight">
+            <div class="hero-body">
+                <div class="container">
+                    <!-- Carousel wrapper -->
+                    <div id="carousel" class="carousel carousel-dark slide carousel-fade" data-mdb-ride="carousel">
+                        <!-- Indicators -->
+                        <!-- <div class="carousel-indicators">
+                            <button type="button" data-mdb-target="#carousel" data-mdb-slide-to="0"
+                                class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-mdb-target="#carousel" data-mdb-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-mdb-target="#carousel" data-mdb-slide-to="2"
+                                aria-label="Slide 3"></button>
+                        </div> -->
 
+                        <!-- Inner -->
+                        <div class="carousel-inner">
+                            <!-- Single item -->
+                            <!-- <div class="carousel-item active">
+                                <div class="card">
+                                    <div class="card-content">
+                                        <div class="content has-text-centered">
+                                            <p class="title">
+                                                Testing
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <footer class="card-footer">
+                                        <a href="https://github.com/hsengu/ragnarokinfo" class="card-footer-item">
+                                            <span class="icon"><i class="fab fa-github"></i></span>
+                                            <span>View this Project on GitHub</span>
+                                        </a>
+                                    </footer>
+                                </div>
+                            </div> -->
+
+                            <!-- Single item -->
+                            <!-- <div class="carousel-item">
+                                <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(22).jpg"
+                                    class="d-block w-100" alt="..." />
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Second slide label</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                </div>
+                            </div> -->
+
+                            <!-- Single item -->
+                            <!-- <div class="carousel-item">
+                                <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(23).jpg"
+                                    class="d-block w-100" alt="..." />
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Third slide label</h5>
+                                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                                </div>
+                            </div>
+                        </div> -->
+                        <!-- Inner -->
+
+                        <!-- Controls -->
+                        <button class="carousel-control-prev" type="button" data-mdb-target="#carousel"
+                            data-mdb-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-mdb-target="#carousel"
+                            data-mdb-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                    <!-- Carousel wrapper -->
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="footer">
         <div class="content has-text-centered">
@@ -110,6 +187,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 
