--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/cardstyles.css">
     <title>Hok S. Uy - Portfolio</title>
 </head>
 
@@ -24,11 +25,11 @@
                 <img src="./assets/img/site-badge.png" width="112" height="28">
             </a>
 
-            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarItems">
+            <!-- <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarItems">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
-            </a>
+            </a> -->
         </div>
         <div id="navbarItems" class="navbar-menu has-text-centered">
             <div class="navbar-start">
@@ -110,71 +111,22 @@
             <div class="hero-body">
                 <div class="container">
                     <!-- Carousel wrapper -->
-                    <div id="carousel" class="carousel carousel-dark slide carousel-fade" data-mdb-ride="carousel">
-                        <!-- Indicators -->
-                        <!-- <div class="carousel-indicators">
-                            <button type="button" data-mdb-target="#carousel" data-mdb-slide-to="0"
-                                class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-mdb-target="#carousel" data-mdb-slide-to="1"
-                                aria-label="Slide 2"></button>
-                            <button type="button" data-mdb-target="#carousel" data-mdb-slide-to="2"
-                                aria-label="Slide 3"></button>
-                        </div> -->
-
+                    <div id="carousel" class="carousel slide carousel-fade" data-mdb-ride="carousel">
                         <!-- Inner -->
                         <div class="carousel-inner">
-                            <!-- Single item -->
-                            <!-- <div class="carousel-item active">
-                                <div class="card">
-                                    <div class="card-content">
-                                        <div class="content has-text-centered">
-                                            <p class="title">
-                                                Testing
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <footer class="card-footer">
-                                        <a href="https://github.com/hsengu/ragnarokinfo" class="card-footer-item">
-                                            <span class="icon"><i class="fab fa-github"></i></span>
-                                            <span>View this Project on GitHub</span>
-                                        </a>
-                                    </footer>
-                                </div>
-                            </div> -->
-
-                            <!-- Single item -->
-                            <!-- <div class="carousel-item">
-                                <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(22).jpg"
-                                    class="d-block w-100" alt="..." />
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Second slide label</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                </div>
-                            </div> -->
-
-                            <!-- Single item -->
-                            <!-- <div class="carousel-item">
-                                <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(23).jpg"
-                                    class="d-block w-100" alt="..." />
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>Third slide label</h5>
-                                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                                </div>
-                            </div>
-                        </div> -->
-                        <!-- Inner -->
-
-                        <!-- Controls -->
-                        <button class="carousel-control-prev" type="button" data-mdb-target="#carousel"
-                            data-mdb-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-mdb-target="#carousel"
-                            data-mdb-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
+                        
+                            <!-- Controls -->
+                            <button class="carousel-control-prev" type="button" data-mdb-target="#carousel"
+                                data-mdb-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-mdb-target="#carousel"
+                                data-mdb-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
                     </div>
                     <!-- Carousel wrapper -->
                 </div>
@@ -183,7 +135,24 @@
     </section>
     <footer class="footer">
         <div class="content has-text-centered">
-            <p><strong>&copy;<strong> Copyrighted 2021 by Hok S. Uy</p>
+            <p><span>&copy; Copyrighted 2021 by <strong>Hok S. Uy</strong></span></p>
+            <p>
+                <span>
+                    <a href="https://github.com/hsengu">
+                        <span class="icon"><i class="fab fa-github"></i></span>
+                    </a>
+                </span>
+                <span>
+                    <a href="https://linkedin.com/in/hoksuy">
+                        <span class="icon"><i class="fab fa-linkedin"></i></span>
+                    </a>
+                </span>
+                <span>
+                    <a href="mailto:hok.s.uy@hsengu.com">
+                        <span class="icon"><i class="fas fa-envelope"></i></span>
+                    </a>
+                </span>
+            </p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
